--- a/ConsoleVersion/ConsoleVersion.csproj
+++ b/ConsoleVersion/ConsoleVersion.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.39" />
+  </ItemGroup>
+
 </Project>
