Refactor project structure

--- a/ConsoleVersion/App.config
+++ b/ConsoleVersion/App.config
@@ -1,3 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <appSettings>
+    <add key="deliveryPlaceXPath" value="//div[@class='informationAboutCustomer__informationPurchase-infoBlock infoBlock']"/>
+    <add key="lotsXPath" value="//div[@class='outputResults__oneResult']"/>
+    <add key="lotName" value="Наименование товара, работ, услуг"/>
+    <add key="measureUnits" value="Единицы измерения"/>
+    <add key="amount" value="Количество"/>
+    <add key="unitCost" value="Стоимость единицы продукции"/>
+    <add key="tendersByPeriodURL" value="https://api.market.mosreg.ru/api/Trade/GetTradesForParticipantOrAnonymous"/>
+    <add key="tenderNotification" value="https://market.mosreg.ru/Trade/ViewTrade/{id}"/>
+    <add key="tenderDocumentition" value="https://api.market.mosreg.ru/api/Trade/{id}/GetTradeDocuments"/>
+    <add key="amountUdefined" value="Количество не указано как число с запятой"/>
+    <add key="unitCostUdefined" value="Цена за единицу не указана как число с запятой"/>
+    <add key="deliveryPlace" value="Место поставки:"/>
+    <add key="moscowOffsetFromUtc" value="3"/>
+    <add key="novosibirskOffsetFromUtc" value="7"/>
+    <add key="deliveryPlace" value="Место поставки:"/>
+  </appSettings>
 </configuration>
