--- a/ConsoleVersion/ConsoleVersion.csproj
+++ b/ConsoleVersion/ConsoleVersion.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.11.39" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
